fix: gap between realization and organizers enlarged

--- a/src/Pages/Parceiros/Parceiros.css
+++ b/src/Pages/Parceiros/Parceiros.css
@@ -35,7 +35,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        gap: 4rem;
+        gap: 12rem;
     }
 }
 
